[package]
name = "rocket_explore"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", features = ["helmet"] }
serde = { version = "1.0.129", features = ["derive"] }
